Prevent non working dbGaP ids from showing up in the list. Resolves #351. (#356)

--- a/src/components/data-table/data-table.module.css
+++ b/src/components/data-table/data-table.module.css
@@ -93,6 +93,11 @@ table {
     padding: 0 4px;
 }
 
+/* Detail table - row cell - "access" */
+.detail .row td:nth-of-type(4) {
+    min-width: 32px;
+}
+
 /* Row cells - "total" */
 .row.total td {
     font-weight: 500;
